--- a/level_four/nineteen/css/main.css
+++ b/level_four/nineteen/css/main.css
@@ -1,19 +1,47 @@
-body {
-   
-}
 
 .title{
+    position: relative;
+    width: 370px;
+    height:100px; 
+    font-family:Arial;
+    
 }
 
 .one{
+    position: fixed;
+    width: 220px;
+    height:400px;
+    padding:5px;
+    left:160px;
+    font-family:georgia;
+    border-bottom-style: double;
+    border-bottom-width:6px;
+    
     
 }
 
 .two{
+    position: fixed;
+    width: 230px;
+    height:400px;
+    left:410px;
+    padding:5px;
+    font-family:georgia;
+    border-bottom-style: double;
+    border-bottom-width:6px;
     
     
 }
 
 .three{
-   
+    position: fixed;
+    width: 160px;
+    height:400px;
+    left:680px;
+    padding:5px;
+    font-family: georgia;
+    border-bottom-style: double;
+    border-bottom-width:6px;
+    
 }
+
