--- a/25_variations/level_five/twenty_three/css/style.css
+++ b/25_variations/level_five/twenty_three/css/style.css
@@ -8,7 +8,8 @@ letter-spacing: 5px;
 color: blue;
 font-size:20px;
 border-bottom-style: double;
-border-bottom-width: 10px;}
+border-bottom-width: 10px;
+display: none;}
 
 
 .one{
