--- a/event_microsite/css/style.css
+++ b/event_microsite/css/style.css
@@ -36,3 +36,12 @@ video{
     left: 400px;
     
 }
+.info3{
+    position:relative;
+    top:2000px;
+    text-align: center;
+    font-size: 25px;
+    width:500px;
+    left: 400px;
+    
+}
