--- a/event_microsite/css/main.css
+++ b/event_microsite/css/main.css
@@ -37,8 +37,8 @@ html{width:100%;
     text-align: center;
     font-size: 50px;
     font-family: 'Rokkitt', serif;
-    padding-bottom: 300px
-    }    
+    padding-bottom: 300px;
+}
 
 .book{
     margin: 0 auto;
@@ -48,7 +48,7 @@ html{width:100%;
     padding-left:150px;
     padding-right:150px;
     font-family: 'Rokkitt', serif;
-    padding-bottom: 400px
+    padding-bottom: 400px;
     } 
 
 video
@@ -57,9 +57,23 @@ video
 }
 
 
+.Blink {
+  animation: blinker 1.5s cubic-bezier(.5, 0, 1, 1) infinite alternate;  
+}
+@keyframes blinker {  
+  from { opacity: 1; }
+  to { opacity: 0; }
+}
 
-
-
+@media screen and (max-width: 800px)
+{   .ip{ font-size: 40px}
+    
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+}
 /*    position: absolute;
     top: 50%;
     left: 50%;
