--- a/event_microsite/css/main.css
+++ b/event_microsite/css/main.css
@@ -57,22 +57,8 @@ video
 }
 
 
-.Blink {
-  animation: blinker 1.5s cubic-bezier(.5, 0, 1, 1) infinite alternate;  
-}
-@keyframes blinker {  
-  from { opacity: 1; }
-  to { opacity: 0; }
-}
-
 @media screen and (max-width: 800px)
-{   .ip{ font-size: 40px}
-    
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%)
+{   padding:15px
 }
 /*    position: absolute;
     top: 50%;
