--- a/event_microsite/css/full.css
+++ b/event_microsite/css/full.css
@@ -19,3 +19,14 @@ video
 {  display:none;
     z-index: -1
 }
+
+
+
+ @media screen and (max-width: 600px) {
+                                    
+                               .page{
+	                                  font-size:2em;
+                                      color: white;
+                                      }
+	
+                                                                      }
