--- a/catalog/main.css
+++ b/catalog/main.css
@@ -1,20 +1,18 @@
-html { 
+html {height: 100%;
   background: url(images/windows_xp.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
- 
-#windowsxp{ width: 400px;
-            margin:25%;
-            z-index: -1;}
+
+
+#windowsxp{ z-index: 1;
+            width: 400px;
+            margin:25%;}
 
 .dialog { width:400px; height:150px;
     background-color:#f0ede0; 
-    position: absolute; 
-    background-image:url("../images/dialogheader.jpg"); 
-    background-repeat:repeat-x;
     border-bottom:3px ridge #0034b0; 
     border-left:2px solid #1783f2; 
     border-right:2px solid #1783f2;}
@@ -35,34 +33,7 @@ html {
 
 .click p { padding:10px; font-size:12px; color:#000 !important; }
 
-.folder{width: 90px;
-        height: 90px;
-        position: absolute;
-        left: 5px;
-        z-index:-1;
-        bottom: 100px;}
 
-.folder img{width:50% }
-
-.folder p {position:relative; top:-20px;
-            font-size:13px;
-            font-family: sans-serif;
-            color: aliceblue;
-            letter-spacing:1px; }
-.folder1{width: 90px;
-        height: 90px;
-        position: absolute;
-        left: 5px;
-        bottom: 5px;
-        z-index:-1}
-
-.folder1 img{width:50% }
-
-.folder1 p {position:relative; top:-20px;
-            font-size:13px;
-            font-family: sans-serif;
-            color: aliceblue;
-            letter-spacing:1px; }
 .ie{width: 90px;
         height: 90px;
         position: absolute;
@@ -78,13 +49,60 @@ html {
             color: aliceblue;
             letter-spacing:1px; }
 
-.instaweb{width:600px;
-            height:430px;
-        display:none}
-
-.instaweb img{width:600px;}
-iframe {;
-        position:relative;
-        bottom:342px;
-        left: 5px;
+iframe{position: relative;
+        width:889px;
+        height:500px;
+        left:5px;
+        top:-510px;
         }
+
+.instaweb{ 
+    position:absolute;
+    top:-10px;
+    width:900px;
+    height:643px;
+    display:none;
+    z-index: 1;}
+
+.instaweb img{width:900px;
+    height:643px}
+
+.leave{ position: relative;
+        background-color:;
+        width:30px;
+        height:30px; 
+        z-index:1;
+        top:-1150px;
+        right:-870px;
+                }
+
+
+.ie, .ie1, .ie2, .ie3 {width: 90px;
+        height: 90px;
+        position: relative;
+        left: 5px;
+        top:-800px;
+        z-index:-1}
+
+
+.ie4, .ie5, .ie6, .ie7, .ie8 {width: 90px;
+        height: 90px;
+        position:relative;
+        top:-1160px;
+        left: 150px;
+        z-index:-1}
+
+.ie9, .ie10, .ie11, .ie12 {width: 90px;
+        height: 90px;
+        position:relative;
+        top:-1610px;
+        left: 300px;
+        z-index:-1}
+
+.ie img, .ie1 img, .ie2 img, .ie3 img, .ie4 img, .ie5 img, .ie6 img, .ie7 img, .ie8 img, .ie9 img, .ie10 img, .ie11 img, .ie12 img {width:50% }
+
+.ie p, .ie1 p, .ie2 p, .ie3 p, .ie4 p, .ie5 p, .ie6 p, .ie7 p, .ie8 p, .ie9 p, .ie10 p, .ie11 p, .ie12 p {position:relative; top:-20px;
+            font-size:13px;
+            font-family: sans-serif;
+            color: aliceblue;
+            letter-spacing:1px; } 
